--- a/env.example
+++ b/env.example
@@ -6,3 +6,4 @@ PORT=4000
 SESSION_SECRET=your_random_session_secret_here_change_in_production
 FRONTEND_URL=http://localhost:3000
 NODE_ENV=development
+WEBHOOK_URL=
